# storefront-mcp-server

./: .dockerignore  .gitignore  AZURE_DEPLOYMENT_SUMMARY.md  CONFIGURATION.md  Dockerfile  FASTAPI_DEPLOYMENT.md  PRODUCTION_TEST_RESULTS.md  README.md  activate.sh  demo_environments.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_server.py  run_server_container.py  run_server_fastapi.py  setup.py  test_mcp_local.py
config/: README.md  env.development  env.docker  env.production  env.test  example_mappings.yaml  tool_mappings.json  tool_mappings.properties  tool_mappings.yaml
deployment/: README.md
deployment/azure/: container-app.yaml  containerapp.yaml  deploy.sh  pre-deploy-check.sh
src/: __init__.py
src/product_mcp/: __init__.py  cli.py  config.py  config_cli.py  config_utils.py  mapping_loader.py  server.py  test_client.py
